--- a/index.html
+++ b/index.html
@@ -44,18 +44,18 @@
 		<br/>
 		<br/>
 			<p style="font-size: 32px" align="center">
-				Welcome to my Portfolio website!
+				Welcome to Ralphonix's Design Hub – Where Innovation Meets Precision!
 			</p>
 			<br>
 			<div align="center">
-				<p style="text-indent: 50px; font-size: 18px; max-width: 1200px" align="center">
-				Hello, my name is Rafał and I have been passionate about computers since childhood. Pursuing my dream, I am currently studying Computer Science and honed my skills to deliver innovative solutions that exceed expectations.
-				Because of my passion about creating some simple plastic parts for my 3D printer I decided to learn more about CAD programms so I started to learn Solidworks as my CAD software of choice.
-				I find myself insipired of these simple parts that I learned to make to keep learning and focus more in product designing and manufacturing aspects including diffrent production methods.
-				I belive that computer science skills will help me with lots of possible implementations for these designs and also could make the workflow more optimised and efficient for further development and production.
-				During the studies time I learned a lot about computers and how I can use this to make enjoyable things. Most of daily use objects that we see daily are somewhat manufactured and designed by computers and most if not all are using CAD/CAM.
-				Therefore I aim to keep learn more and more to become better everyday and help with creating only best products in the nearest future.
+			<p style="text-indent: 50px; font-size: 18px; max-width: 1200px" align="center">
+				Greetings, I'm Rafał, a Computer Science enthusiast with a keen eye for design and an unwavering commitment to delivering exceptional custom parts. Currently pursuing my studies in Computer Science, I've honed my skills to seamlessly integrate technology with the art of design.
 			</p>
+			<p> 💻 Technical Proficiency:</p>
+
+			<p style="text-indent: 50px; font-size: 18px; max-width: 1200px" align="center">
+				
+			</p>	
 			</div>	
 		</div>
 	<div class="content-section-computerAbilities">
