--- a/index.html
+++ b/index.html
@@ -43,58 +43,59 @@
 		<div class="content-section-welcome">
 		<br/>
 		<br/>
-			<p style="font-size: 32px" align="center">
-				Welcome to Ralphonix's Design Hub – Where Innovation Meets Precision!
+			<p style="font-size: 20px; font-weight: bold; text-align: center">
+				Welcome to Rafał's Design Hub – Where Innovation Meets Precision!
 			</p>
-			<br>
-			<div align="center">
-			<p style="text-indent: 50px; font-size: 18px; max-width: 1200px" align="center">
+			<p style="font-size: 16px; padding-left: 50px">
 				Greetings, I'm Rafał, a Computer Science enthusiast with a keen eye for design and an unwavering commitment to delivering exceptional custom parts. Currently pursuing my studies in Computer Science, I've honed my skills to seamlessly integrate technology with the art of design.
 			</p>
-			<p> 💻 Technical Proficiency:</p>
+			<p style="font-size: 20px; font-weight: bold; text-align: center">
+				Technical Proficiency:
+			</p>
+			<p style="font-size: 16px; padding-left: 50px">
+				With a foundation in Computer Science, I bring a unique blend of technical expertise and creative flair to the table. My journey began with a passion for 3D printing, leading me to master industry-standard CAD software, specifically Solidworks. The result? The ability to craft intricate and functional designs tailored to your exact specifications.
+			</p>
+			<p style="font-size: 20px; font-weight: bold; text-align: center">
+				Innovative Solutions:
+			</p>
+			<p style="font-size: 16px; padding-left: 50px">
+				Driven by a fascination for the synergy between technology and design, I've expanded my focus beyond mere 3D printing. My portfolio showcases a diverse array of custom parts, each meticulously crafted to not only meet but exceed expectations. From concept to production, I pride myself on delivering innovative solutions that stand out in the market.
+			</p>
+			<p style="font-size: 20px; font-weight: bold; text-align: center">
+				Design Philosophy:
+			</p>
+			<p style="font-size: 16px; padding-left: 50px">
+				In my world, design is not just about aesthetics; it's about solving problems and enhancing user experiences. Leveraging my Computer Science background, I optimize workflows for efficiency, ensuring a seamless transition from concept to the final product. Your vision deserves nothing less than a meticulously executed design strategy.
+			</p>
+			<p style="font-size: 20px; font-weight: bold; text-align: center">
+				Industry Impact:
+			</p>
+			<p style="font-size: 16px; padding-left: 50px">
+				Computers have revolutionized design and manufacturing, shaping the world we live in. My portfolio reflects the profound impact of computer-aided design and manufacturing (CAD/CAM) on everyday objects. Join me in exploring the endless possibilities that technology brings to the realm of design.
+			</p>
+			<p style="font-size: 20px; font-weight: bold; text-align: center">
+				Continuous Learning:
+			</p>
+			<p style="font-size: 16px; padding-left: 50px">
+				The design landscape is ever-evolving, and I am committed to staying at the forefront of industry trends. Ongoing learning is not just a practice; it's a mindset that fuels my quest for excellence. Expect nothing but the best as I evolve with the latest advancements in design and technology.
+			</p>
+			<p style="font-size: 20px; font-weight: bold; text-align: center">
+				Let's Collaborate:
+			</p>
+			<p style="font-size: 16px; padding-left: 50px">
+				Ready to elevate your projects with precision-designed custom parts? I invite you to explore my portfolio and discover the potential for seamless collaboration. Your vision, combined with my technical prowess and design finesse, can bring forth the next generation of exceptional products. Let's embark on this design journey together – the possibilities are limitless!
+			</p>
 
-			<p style="text-indent: 50px; font-size: 18px; max-width: 1200px" align="center">
-				
-			</p>	
-			</div>	
+
+
+
+
+			
+			
 		</div>
-	<div class="content-section-computerAbilities">
-		<br/>
-			<p style="font-size: 24px; font-style: oblique" align="center">
-				Computer Abilities
-			</p><br/>
-			<p style="font-size: 20px;text-indent: 50px; font-style: italic" align="center">
-				CAD:
-			</p>
-			<p style="font-size: 16px" align="center">
-				Solidworks - basics yet keep learning								
-			</p>
-			<p style="font-size: 20px;text-indent: 50px; font-style: italic" align="center">
-				Programming:
-			</p>
-			<p style="font-size: 16px" align="center">
-				C++ - basics								
-			</p>
-			<p style="font-size: 20px;text-indent: 50px; font-style: italic" align="center">
-				Adobe Tools:
-			</p><br/>
-			<p style="font-size: 16px" align="center">
-				Adobe Photoshop – Basic skills<br/>
-				Adobe Illustrator – Basic skills<br/>
-				Adobe DreamWeaver – Intermediate skills (used to create this portfolio)<br/>								
-			</p>
-			<p style="font-size: 20px;text-indent: 50px; font-style: italic" align="center">
-			Microsoft Office:
-			</p><br/>
-			<p style="font-size: 16px" align="center">
-				Microsoft Excel – Advanced level<br/>
-				Microsoft Word – Intermediate level<br/>
-				Microsoft Outlook – Intermediate level (used to create this portfolio)<br/>	
-			</p>
-	</div> 
 </div>
 	  
-	  </br>
+	  <br/>
 	
 
 	
