--- a/gallery.html
+++ b/gallery.html
@@ -140,9 +140,10 @@
 </tbody>
 </table>
 
-<p>When I first started with CAD designing, I was a complete beginner. I had to learn from scratch and find the right resources to get started in this fascinating field of modern engineering.</p>
-<p>As I learned the basics, I realized how crucial sketches, dimensions, and relations are in CAD. With the help of some generous individuals who shared their knowledge, I was able to create a Circuit Board. I used the dimensions from Micron's datasheet to make it as accurate as possible.</p>
-<p>I was amazed at how simple tools like Extrude and Extruded Cut Features could transform a 2D datasheet into a precise 3D model. This model can now be used in more complex assemblies in the future, which I'm excited about.</p>
+<p>Embarking on my journey into CAD designing, I started as a novice, eager to delve into the world of modern engineering. The challenge was immense, but so was the excitement of learning and creating something tangible.</p>
+<p>Mastering the fundamentals, I discovered the pivotal role that sketches, dimensions, and relations play in CAD design. Guided by the generosity of those who shared their expertise, I set out to create a meticulous Circuit Board, using the precise dimensions outlined in Micron's datasheet.</p>
+<p>The magic unfolded as I harnessed seemingly simple tools like Extrude and Extruded Cut Features. A 2D datasheet metamorphosed into an intricately detailed 3D model of a RAM Memory Stick. Witnessing this transformation, I realized the power these tools wield in translating theoretical specifications into a tangible, functional model.</p>
+<p>This model, crafted with precision and attention to detail, now stands as a testament to my journey from a CAD beginner to a skilled designer. Beyond its standalone beauty, this RAM Memory Stick model is a versatile asset ready to integrate into more complex assemblies in the future.</p>
 <br/>
 
 </div>
@@ -164,13 +165,14 @@
 	</tr>
 </tbody>
 </table>
-<p>This model is all about showcasing the practical use of the Sweep Feature in CAD design. My journey with this project began with a curiosity to understand 3D sketches and how they could bring life to a Sweep Feature.</p>
-<p>My starting point was crafting a Headphone Jack, a humble beginning that required a simple sketch and the Revolve Feature. "It felt like taking the first steps on a learning journey.</p>
-<p>To create the essential connection, I employed the Extrude Feature, shaping a short, straight cable piece. It was like laying the foundation of a bridge between components.</p>
-<p>As the project progress, I delved into creating a stress relief section, using the Extrude Feature with a twist - I set the Draft parameter and left Merge unchecked. This approach allowed for precise cuts from top to bottom, keeping the cable separate as individual pieces.</p>
-<p>With all the parts ready, I moved on to the most exciting part of the journey. I utilized the 3D sketch I had crafted earlier and the cable profile to seamlessly connect all elements using the Sweep Feature. It was like watching puzzle pieces fall into place, and I learned the importance of tangency relations to make the connections smooth and elegant.</p>
-<p>At the end, I managed to utilize acquired knowledge and create a simple electrical socket plug with a cable using the same technique</p>	
-<p>After completing this project, I felt a sense of accomplishment and decided to continue my learning journey through practice.</p><br/>
+<p>Within the realm of CAD design, this project serves as a testament to the practical applications of the Sweep Feature. My exploration into this facet of design was fueled by a curiosity to unravel the possibilities of 3D sketches and their transformative role in the Sweep Feature.</p>
+<p>The journey commenced with the creation of a humble Headphone Jack, a project that started with a fundamental 3D sketch and the Revolve Feature. It felt akin to taking the initial steps on a learning odyssey.</p>
+<p>To establish the essential connections, the Extrude Feature came into play, shaping a short, straight cable piece. This phase resembled laying the foundational blocks of a bridge between components.</p>
+<p>As the project unfolded, attention turned to crafting a stress relief section. Leveraging the Extrude Feature with a twist - setting the Draft parameter and leaving Merge unchecked - allowed for precise cuts, maintaining the cable as distinct, individual pieces.</p>
+<p>The culmination of the journey arrived at the most thrilling stage. Utilizing the earlier crafted 3D sketch and the cable profile, the Sweep Feature seamlessly connected all elements. It was akin to observing puzzle pieces effortlessly falling into place, underscoring the importance of tangency relations for a smooth and elegant connection.</p>
+<p>Notably, this project extended beyond its initial scope, culminating in the creation of a simple electrical socket plug with an attached cable using the same technique.</p>
+<p>The completion of this project brought forth a profound sense of accomplishment, propelling me to further continue my learning journey through hands-on practice.</p>
+<br/>
 </div>
 
 	
@@ -190,13 +192,13 @@
 </tr>
 </tbody>
 </table>
-<p>This model demonstrates how to use the Revolve and Cavity Features in CAD design. My journey started by creating a revolve sketch profile, which became the main body of the bottle.</p>
-<p>After crafting the bottle's main body, I decided to add some details. I used Sweep Cut and Circular patterns to create attractive indents inside the bottle.</p>
-<p>For the neck of the bottle, I saw it as a great opportunity to learn and use the Helix feature. This helped me create a thread-like design.</p>
-<p>Once the body was successfully made, I used the Shell feature and turned it into an assembly. Using the original part as a guide, I created a new part for the bottle's cap.</p>
-<p>To give the bottle a realistic touch, I added a transparent appearance. With the help of the Cavity Feature, I was able to simulate the liquid inside the bottle and make it look accurate.</p>
-<p>As a final touch, I learned how to use decals and applied them to both the cup and the bottle body to create labels.</p>
-<p>This has been a very interesting journey. I've learned that even complex shapes, at first glance, are achievable. I can't wait to showcase more in the future.</p>
+Within the realm of CAD design, this model serves as an embodiment of the artistry achievable with the Revolve and Cavity Features. The journey commenced with the creation of a revolve sketch profile, shaping the elegant main body of the bottle.</p>
+<p>Elevating the design further, intricate details were added to the bottle's interior. The marriage of the Sweep Cut and Circular patterns resulted in captivating indents, enhancing the aesthetic appeal.</p>
+<p>For the bottle's neck, the exploration of the Helix feature became an exciting venture. This addition brought forth a thread-like design, showcasing the versatility of CAD tools in achieving intricate details.</p>
+<p>With the successful formation of the bottle's body, the transition to an assembly was marked by the strategic use of the Shell feature. Guided by the original part, a new element emerged—the meticulously crafted cap, seamlessly integrated into the overall design.</p>
+<p>To infuse a sense of realism, a transparent appearance was applied, and the Cavity Feature came into play. This feature allowed the simulation of liquid within the bottle, adding an element of accuracy and authenticity to the design.</p>
+<p>Adding a final layer of sophistication, the introduction of decals became a skill to master. With precision, labels were applied to both the cup and the bottle body, culminating in a polished and professional presentation.</p>
+<p>This journey has been nothing short of fascinating, unveiling the realization that even seemingly complex shapes are within reach. Anticipating future opportunities to showcase more intricate designs and further push the boundaries of creativity.</p>
 <br/>
 </div>
 	
@@ -219,15 +221,14 @@
 </table>
 	
 	
-<p>In the model above, I practiced using the Loft and Split Features.</p>
-<p>I began by creating multiple profiles for the Loft feature. Once the Loft was completed, I added some fillets to finalize the basic solid shape.</p>
-<p>With the basic shape in good order, I decided to Shell the model and then split it into two parts, allowing me to work on each side separately.</p>
-<p>This workflow enabled me to add more details to the bottom part. I focused on incorporating mounting bosses for screws and space for a PCB, then proceeded to cut holes for the screws.</p>
-<p>Returning to the top part was straightforward; it simply involved switching windows. This experience highlighted how efficient SolidWorks can be, thanks to its built-in features that streamline the modeling process.</p>
-<p>Working on the top part presented some challenges. I had to make cuts for operational buttons and add a PCB with its major components, including the Scroll Wheel and button casings.</p>
-<p>Once the PCB was successfully incorporated, I knew the exact clearances needed to make the final cut in the top section. To wrap it up, I added screws and applied appearances to give my model a polished look. This project served as a valuable lesson in utilizing the Loft feature, which will enhance my future modeling endeavors.</p>
-
-
+<p>This model stands as a testament to my proficiency in utilizing the dynamic features of Loft and Split in CAD design.</p>
+<p>The journey commenced with the creation of multiple profiles for the Loft feature, weaving together a symphony of shapes that culminated in a harmonious whole. Adding finesse to the basic solid shape, fillets were strategically applied to achieve a polished result.</p>
+<p>With the foundational shape in place, the decision to Shell the model marked a pivotal point. The subsequent split into two distinct parts allowed for a focused approach, enabling intricate work on each side independently.</p>
+<p>This strategic workflow facilitated the addition of detailed elements to the bottom part. The focus shifted to the incorporation of mounting bosses for screws and creating space for a PCB. Precision cuts for screw holes seamlessly blended functionality with design.</p>
+<p>Navigating back to the top part was a smooth transition, a testament to the efficiency of SolidWorks. The experience highlighted the intuitive nature of the software, streamlining the modeling process through its built-in features.</p>
+<p>Challenges emerged as I delved into refining the top part. Intricate cuts were meticulously crafted to accommodate operational buttons, and the addition of a PCB brought forth the complexities of incorporating major components like the Scroll Wheel and button casings.</p>
+<p>Upon successfully integrating the PCB, the meticulous process unveiled the exact clearances needed for the final cut in the top section. To bring the model to fruition, screws were added, and appearances were applied to impart a polished aesthetic.
+This project not only added depth to my skill set but also served as a valuable lesson in harnessing the capabilities of the Loft feature, a skill set that will undoubtedly enhance my future modeling endeavors.</p>
 </div>
 	
 
@@ -247,17 +248,15 @@
 </tr>
 </tbody>
 </table>
-<p>Above is a simplified version of a Game Controller.</p>
-<p>The model was first created using simple Extrude Features to establish the rough shape.</p>
-<p>Then, with the Filler Feature, I refined the shape into a more detailed solid.</p>
-<p>Subsequently, the focus shifted to creating the shell and adding details. A challenging aspect was ensuring that the angles were not too tight to make the Shell Feature work correctly.</p>
-<p>For this, I found the Evaluate Toolkit to be immensely helpful. With appropriately adjusted curvatures, I was able to successfully create the shell, adding final touches such as analogs and button cuts.</p>
-<p>Utilizing Extrude Features with the Thin parameter allowed me to create inner ribs, enhancing the model's structure.</p>
-<p>Another opportunity to apply the Evaluate Toolkit arose when I realized that my model wouldn't be optimal for manufacturing if I used a regular straight line for splitting. So, with the assistance of the Parting Line Analysis Tool, I managed to create a suitable splitting line.</p>
-<p>Following these steps, the remaining tasks were relatively straightforward - adding the PCB with buttons and analogs.</p>
-<p>In reality, a fully detailed model would require much more complexity, but as it was a simplified version, I could utilize various tools to create it relatively quickly while thoroughly enjoying the process.</p>
-<p>Conducting Draft Analysis and applying Draft Features at the end ensured that the part could be manufactured using Injection Molding Technology, which I found to be an intriguing aspect to explore further.</p>
-<p>I found my SolidWorks journey very interesting and appealing, motivating me to study more and explore the endless possibilities. I can't wait to improve my skills by creating more models, hopefully for your company.</p>
+<p>Encapsulated within these digital lines is a simplified rendition of a Game Controller, a testament to the precision and versatility of SolidWorks in my hands.</p>
+<p>The initial stages saw the establishment of the controller's rough shape, brought to life through the strategic use of simple Extrude Features. The subsequent refinement journey commenced with the introduction of the Filler Feature, transforming the basic shape into a more intricate and detailed solid.</p>
+<p>Attention then turned to the creation of the shell and the incorporation of nuanced details. A notable challenge emerged in navigating the Shell Feature, requiring a delicate balance to ensure optimal angles. Here, the Evaluate Toolkit proved to be an invaluable companion, aiding in the fine-tuning of curvatures for a successful shell creation. Analog sticks and button cuts, the essence of a gaming experience, found their place in this meticulous process.</p>
+<p>Delving further, the application of Extrude Features with the Thin parameter birthed inner ribs, fortifying the structural integrity of the model.</p>
+<p>An unforeseen hurdle surfaced when considering the model's manufacturability. The Parting Line Analysis Tool, an unsung hero in this tale, facilitated the creation of a suitable splitting line, ensuring the design's feasibility for manufacturing.</p>
+<p>With these foundational elements in place, the subsequent tasks flowed seamlessly - the addition of the PCB with buttons and analogs, bringing the controller to life.</p>
+<p>Reality dictates that a fully detailed model demands more complexity, but within the confines of this simplified version, various SolidWorks tools expedited the creation process while enriching my experience.</p>
+<p>Conducting a Draft Analysis and implementing Draft Features in the final stages ensured manufacturability using Injection Molding Technology, unveiling yet another intriguing facet to explore.</p>
+<p>This SolidWorks journey has been a captivating odyssey, propelling me to delve deeper into its intricacies and explore the boundless possibilities it offers. The prospect of refining my skills further through the creation of more intricate models, perhaps for your esteemed company, fuels my anticipation.</p>
 </div>
 
 	
