--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
 			e-mail:			
 			</p>
 			<p style="font-size: 20px;text-indent: 50px" align="center">
-			<a href="mailto:ralphonix@outlook.com">Rafał - leave me a message</a>
+			<a href="mailto:ralphonix@outlook.com">leave me a message (e-mail)</a>
 			</p><br/>
 			
 <!--			
