--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portfolio Ralphonix</title>
+    <title>Portfolio Rafał H.</title>
     <!-- Bootstrap -->
 	<link href="css/bootstrap-4.4.1.css" rel="stylesheet">
 	
@@ -20,9 +20,9 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent1">
               <ul class="navbar-nav mr-auto">
-                <li class="nav-item active"> <a class="nav-link" href="index.html">About</a></li>
+                <li class="nav-item"> <a class="nav-link" href="index.html">About</a></li>
                 <li class="nav-item"> <a class="nav-link" href="gallery.html">Gallery</a></li>
-                <li class="nav-item"> <a class="nav-link" href="contact.html">Contact</a></li>
+                <li class="nav-item active"> <a class="nav-link" href="contact.html">Contact</a></li>
               </ul>
             </div>
           </nav>
@@ -39,6 +39,7 @@
     </tr>
   </tbody>
 </table>
+</br>
 <div class="container-fluid">
 		<div class="content-section-contact">
 
@@ -53,7 +54,7 @@
 			e-mail:			
 			</p>
 			<p style="font-size: 20px;text-indent: 50px" align="center">
-			<a href="mailto:ralphonix@outlook.com">leave me a message (e-mail)</a>
+			<a href="mailto:rafalh26@gmail.com">Rafał - leave me a message</a>
 			</p><br/>
 			
 <!--			
