--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portfolio Ralphonix</title>
+    <title>Portfolio Rafał H.</title>
     <!-- Bootstrap -->
 	<link href="css/bootstrap-4.4.1.css" rel="stylesheet">
 	
@@ -42,58 +42,52 @@
 <div class="container-fluid">
 		<div class="content-section-welcome">
 		<br/>
-		<br/>
-			<p style="font-size: 18px; font-weight: bold; text-align: center">
+			<p style="font-size: 20px; font-weight: bold; text-align: center">
 				Welcome to Rafał's Design Hub – Where Innovation Meets Precision!
 			</p>
-			<p style="font-size: 16px; padding-left: 50px">
+			<p style="font-size: 18px; padding-left: 50px">
 				Greetings, I'm Rafał, a Computer Science enthusiast with a keen eye for design and an unwavering commitment to delivering exceptional custom parts. Currently pursuing my studies in Computer Science, I've honed my skills to seamlessly integrate technology with the art of design.
 			</p>
-			<br/>
-			<br/>
-			<p style="font-size: 16px; font-weight: bold; padding-left: 100px">
+			<div style="font-size: 16px; font-weight: bold; padding-left: 50px;">
 			  &curren; Technical Proficiency:
-			</p>
-			<p style="font-size: 16px; padding-left: 50px">
-				With a foundation in Computer Science, I bring a unique blend of technical expertise and creative flair to the table. My journey began with a passion for 3D printing, leading me to master industry-standard CAD software, specifically Solidworks. The result? The ability to craft intricate and functional designs tailored to your exact specifications.
-			</p>
-			<p style="font-size: 16px; font-weight: bold; padding-left: 100px">
-				&curren; Innovative Solutions:
-			</p>
-			<p style="font-size: 16px; padding-left: 50px">
+				<div style="font-size: 16px; font-weight: normal; margin-top: 0;">
+					With a foundation in Computer Science, I bring a unique blend of technical expertise and creative flair to the table. My journey began with a passion for 3D printing, leading me to master industry-standard CAD software, specifically Solidworks. The result? The ability to craft intricate and functional designs tailored to your exact specifications.
+				</div>
+			</div>
+			<div style="font-size: 16px; font-weight: bold; padding-left: 50px;">
+			  &curren; Innovative Solutions:
+			  <div style="font-size: 16px; font-weight: normal; margin-top: 0;">
 				Driven by a fascination for the synergy between technology and design, I've expanded my focus beyond mere 3D printing. My portfolio showcases a diverse array of custom parts, each meticulously crafted to not only meet but exceed expectations. From concept to production, I pride myself on delivering innovative solutions that stand out in the market.
-			</p>
-			<p style="font-size: 16px; font-weight: bold; padding-left: 100px">
-				&curren; Design Philosophy:
-			</p>
-			<p style="font-size: 16px; padding-left: 50px">
+			  </div>
+			</div>
+
+			<div style="font-size: 16px; font-weight: bold; padding-left: 50px;">
+			  &curren; Design Philosophy:
+			  <div style="font-size: 16px; font-weight: normal; margin-top: 0;">
 				In my world, design is not just about aesthetics; it's about solving problems and enhancing user experiences. Leveraging my Computer Science background, I optimize workflows for efficiency, ensuring a seamless transition from concept to the final product. Your vision deserves nothing less than a meticulously executed design strategy.
-			</p>
-			<p style="font-size: 16px; font-weight: bold; padding-left: 100px">
-				&curren; Industry Impact:
-			</p>
-			<p style="font-size: 16px; padding-left: 50px">
+			  </div>
+			</div>
+
+			<div style="font-size: 16px; font-weight: bold; padding-left: 50px;">
+			  &curren; Industry Impact:
+			  <div style="font-size: 16px; font-weight: normal; margin-top: 0;">
 				Computers have revolutionized design and manufacturing, shaping the world we live in. My portfolio reflects the profound impact of computer-aided design and manufacturing (CAD/CAM) on everyday objects. Join me in exploring the endless possibilities that technology brings to the realm of design.
-			</p>
-			<p style="font-size: 16px; font-weight: bold; padding-left: 100px">
-				&curren; Continuous Learning:
-			</p>
-			<p style="font-size: 16px; padding-left: 50px">
+			  </div>
+			</div>
+
+			<div style="font-size: 16px; font-weight: bold; padding-left: 50px;">
+			  &curren; Continuous Learning:
+			  <div style="font-size: 16px; font-weight: normal; margin-top: 0;">
 				The design landscape is ever-evolving, and I am committed to staying at the forefront of industry trends. Ongoing learning is not just a practice; it's a mindset that fuels my quest for excellence. Expect nothing but the best as I evolve with the latest advancements in design and technology.
-			</p>
-			<p style="font-size: 16px; font-weight: bold; padding-left: 100px">
-				&curren; Let's Collaborate:
-			</p>
-			<p style="font-size: 16px; padding-left: 50px">
+			  </div>
+			</div>
+
+			<div style="font-size: 16px; font-weight: bold; padding-left: 50px;">
+			  &curren; Let's Collaborate:
+			  <div style="font-size: 16px; font-weight: normal; margin-top: 0;">
 				Ready to elevate your projects with precision-designed custom parts? I invite you to explore my portfolio and discover the potential for seamless collaboration. Your vision, combined with my technical prowess and design finesse, can bring forth the next generation of exceptional products. Let's embark on this design journey together – the possibilities are limitless!
-			</p>
-
-
-
-
-
-			
-			
+			  </div>
+			</div>		
 		</div>
 </div>
 	  
