--- a/gallery.html
+++ b/gallery.html
@@ -122,10 +122,12 @@
 	<a class="carousel-control-next" href="#carouselExampleIndicators1" role="button" data-slide="next" style="max-width: 50px"> <span class="carousel-control-next-icon" aria-hidden="true"  style="max-width: 50px"></span> <span class="sr-only">Next</span> </a>
 	</div>
 </div>
-<br>
-
-
-
+<div id="DriveAccess" style="display: flex; justify-content: center; align-items: center; font-size: 24px">
+    <a href="https://drive.google.com/drive/folders/1-SlrNJRlFSeStu1kl4mwckV5dtdg3aAG?usp=sharing">
+        <img src="./gallery/Drive.png" width="60" height="60" alt="Google Drive Shared Link" style="object-fit: scale-down;">
+        Find out more models - including source files
+    </a>
+</div>
 
 <div class="make-me-sticky" id="mini_navi" style="background-color: #B5B5B52F; border-color: aqua; border: thick; max-width: 350px">
 <h5>
@@ -147,16 +149,8 @@
 		<a href="#model 9"><img src="./gallery/M9/1.png" width="40" height="40" alt="4th model picture" style="object-fit: scale-down"/>&ensp;Model #9</a>
 </h5>
 </div>
-
-<div id="DriveAccess" style="display: flex; justify-content: center; align-items: center;">
-    <a href="https://drive.google.com/drive/folders/1-SlrNJRlFSeStu1kl4mwckV5dtdg3aAG?usp=sharing">
-        <img src="./gallery/Drive.png" width="60" height="60" alt="Google Drive Shared Link" style="object-fit: scale-down;">
-        Find out more models - including source files
-    </a>
-</div>
-
 <div id="model 1">
-<h3>Model #1</h3><br/>
+<h3 align="center">Model #1</h3><br/>
 
 <table>
 <tbody>
@@ -178,61 +172,58 @@
 </tr>
 </tbody>
 </table>
-</br>
-
 </div>
 
 	
-<div id="model 4">
-<h3>Earpods Headphones</h3><br/>
+<div id="model 2">
+<h3 align="center"></br>
+Model #2</h3><br/>
 <table>
 <tbody>
-	<tr height = "400">
-		<td style="width: 33%"><a href="./gallery/M4/FrontView.png"><img src="./gallery/M4/FrontView.png" alt="Earpods Headphones Front View" style="max-width: 100%; height: auto;"></a></td>
-		<td style="width: 33%"><a href="./gallery/M4/EarPlug.JPG"><img src="./gallery/M4/EarPlug.JPG" alt="Earplug" style="max-width: 100%; height: auto;"></a></td>
-		<td style="width: 33%"><a href="./gallery/M4/HeadPhonePlug.JPG"><img src="./gallery/M4/HeadPhonePlug.JPG" alt="Headphone Plug" style="max-width: 100%; height: auto;"></a></td>
-	</tr>
-	<tr height = "400">
-		<td style="width: 33%"><a href="./gallery/M4/JackScatch.png"><img src="./gallery/M4/JackScatch.png" alt="Jack Scatch" style="max-width: 100%; height: auto;"></a></td>
-		<td style="width: 33%"><a href="./gallery/M4/RubberEarPlugCoverScatch.png"><img src="./gallery/M4/RubberEarPlugCoverScatch.png" alt="Ear Plug Rubber Cover" style="max-width: 100%; height: auto;"></a></td>
-		<td style="width: 33%"><a href="./gallery/M4/cable with plug.JPG"><img src="./gallery/M4/cable with plug.JPG" alt="Electricity Socket Cable with plug" style="max-width: 100%; height: auto;"></a></td>
-	</tr>
+	
+<tr height = "400">
+<td style="width: 33%"><a href="./gallery/M2/1.png"><img src="./gallery/M2/1.png" alt="2nd model picture #1" style="max-width: 100%; height: auto;"></a></td>
+<td style="width: 33%"><a href="./gallery/M2/2.png"><img src="./gallery/M2/2.png" alt="2nd model picture #2" style="max-width: 100%; height: auto;"></a></td>
+<td style="width: 33%"><a href="./gallery/M2/3.png"><img src="./gallery/M2/3.png" alt="2nd model picture #3" style="max-width: 100%; height: auto;"></a></td>
+</tr>
+<tr height = "400">
+<td style="width: 33%"><a href="./gallery/M2/4.png"><img src="./gallery/M2/4.png" alt="2nd model picture #4" style="max-width: 100%; height: auto;"></a></td>
+<td style="width: 33%"><a href="./gallery/M2/5.png"><img src="./gallery/M2/5.png" alt="2nd model picture #5" style="max-width: 100%; height: auto;"></a></td>
+<td style="width: 33%"><a href="./gallery/M2/6.png"><img src="./gallery/M2/6.png" alt="2nd model picture #6" style="max-width: 100%; height: auto;"></a></td>
+</tr>
+<tr height = "400">
+<td style="width: 33%"><a href="./gallery/M2/7.png"><img src="./gallery/M2/7.png" alt="2nd model picture #7" style="max-width: 100%; height: auto;"></a></td>
+<td style="width: 33%"><a href="./gallery/M2/8.png"><img src="./gallery/M2/8.png" alt="2nd model picture #8" style="max-width: 100%; height: auto;"></a></td>
+<td style="width: 33%"><a href="./gallery/M2/9.png"><img src="./gallery/M2/9.png" alt="2nd model picture #9" style="max-width: 100%; height: auto;"></a></td>
+</tr>
 </tbody>
 </table>
-<p>This model is all about showcasing the practical use of the Sweep Feature in CAD design. My journey with this project began with a curiosity to understand 3D sketches and how they could bring life to a Sweep Feature.</p>
-<p>My starting point was crafting a Headphone Jack, a humble beginning that required a simple sketch and the Revolve Feature. "It felt like taking the first steps on a learning journey.</p>
-<p>To create the essential connection, I employed the Extrude Feature, shaping a short, straight cable piece. It was like laying the foundation of a bridge between components.</p>
-<p>As the project progress, I delved into creating a stress relief section, using the Extrude Feature with a twist - I set the Draft parameter and left Merge unchecked. This approach allowed for precise cuts from top to bottom, keeping the cable separate as individual pieces.</p>
-<p>With all the parts ready, I moved on to the most exciting part of the journey. I utilized the 3D sketch I had crafted earlier and the cable profile to seamlessly connect all elements using the Sweep Feature. It was like watching puzzle pieces fall into place, and I learned the importance of tangency relations to make the connections smooth and elegant.</p>
-<p>At the end, I managed to utilize acquired knowledge and create a simple electrical socket plug with a cable using the same technique</p>	
-<p>After completing this project, I felt a sense of accomplishment and decided to continue my learning journey through practice.</p><br/>
 </div>
 
 	
-<div id="model 5">
-<h3>A Soda Bottle</h3><br/>
+<div id="model 3">
+<h3 align="center"></br>
+Model #3</h3><br/>
 <table>
 <tbody>
+	
 <tr height = "400">
-<td style="width: 33%"><a href="./gallery/M5/FrontView.png"><img src="./gallery/M5/FrontView.png" alt="A Soda Bottle" style="max-width: 100%; height: auto;"></a></td>
-<td style="width: 33%"><a href="./gallery/M5/BottomView.png"><img src="gallery/M5/BottomView.png" alt="A Soda Bottle Bottom View" style="max-width: 100%; height: auto;"></a></td>
-<td style="width: 33%"><a href="gallery/M5/TopView.png"><img src="./gallery/M5/TopView.png" alt="A Soda Bottle Top View" style="max-width: 100%; height: auto;"></a></td>
+<td style="width: 33%"><a href="./gallery/M3/1.png"><img src="./gallery/M3/1.png" alt="3rd model picture #1" style="max-width: 100%; height: auto;"></a></td>
+<td style="width: 33%"><a href="./gallery/M3/2.png"><img src="./gallery/M3/2.png" alt="3rd model picture #2" style="max-width: 100%; height: auto;"></a></td>
+<td style="width: 33%"><a href="./gallery/M3/3.png"><img src="./gallery/M3/3.png" alt="3rd model picture #3" style="max-width: 100%; height: auto;"></a></td>
 </tr>
 <tr height = "400">
-<td style="width: 33%"><a href="./gallery/M5/Cavity.png"><img src="./gallery/M5/Cavity.png" alt="A Soda Bottle Liquid (Cavity)" style="max-width: 100%; height: auto;"></a></td>
-<td style="width: 33%"><a href="./gallery/M5/Sketch.png"><img src="./gallery/M5/Sketch.png" alt="Revolve Profile Sketch" style="max-width: 100%; height: auto;"></a></td>
-<td style="width: 33%"><a href="./gallery/M5/SectionView.png"><img src="./gallery/M5/SectionView.png" alt="Section View" style="max-width: 100%; height: auto;"></a></td>
+<td style="width: 33%"><a href="./gallery/M3/4.png"><img src="./gallery/M3/4.png" alt="3rd model picture #4" style="max-width: 100%; height: auto;"></a></td>
+<td style="width: 33%"><a href="./gallery/M3/5.png"><img src="./gallery/M3/5.png" alt="3rd model picture #5" style="max-width: 100%; height: auto;"></a></td>
+<td style="width: 33%"><a href="./gallery/M3/6.png"><img src="./gallery/M3/6.png" alt="3rd model picture #6" style="max-width: 100%; height: auto;"></a></td>
+</tr>
+<tr height = "400">
+<td style="width: 33%"><a href="./gallery/M3/7.png"><img src="./gallery/M3/7.png" alt="3rd model picture #7" style="max-width: 100%; height: auto;"></a></td>
+<td style="width: 33%"><a href="./gallery/M3/8.png"><img src="./gallery/M3/8.png" alt="3rd model picture #8" style="max-width: 100%; height: auto;"></a></td>
+<td style="width: 33%"><a href="./gallery/M3/9.png"><img src="./gallery/M3/9.png" alt="3rd model picture #9" style="max-width: 100%; height: auto;"></a></td>
 </tr>
 </tbody>
 </table>
-<p>This model demonstrates how to use the Revolve and Cavity Features in CAD design. My journey started by creating a revolve sketch profile, which became the main body of the bottle.</p>
-<p>After crafting the bottle's main body, I decided to add some details. I used Sweep Cut and Circular patterns to create attractive indents inside the bottle.</p>
-<p>For the neck of the bottle, I saw it as a great opportunity to learn and use the Helix feature. This helped me create a thread-like design.</p>
-<p>Once the body was successfully made, I used the Shell feature and turned it into an assembly. Using the original part as a guide, I created a new part for the bottle's cap.</p>
-<p>To give the bottle a realistic touch, I added a transparent appearance. With the help of the Cavity Feature, I was able to simulate the liquid inside the bottle and make it look accurate.</p>
-<p>As a final touch, I learned how to use decals and applied them to both the cup and the bottle body to create labels.</p>
-<p>This has been a very interesting journey. I've learned that even complex shapes, at first glance, are achievable. I can't wait to showcase more in the future.</p>
-<br/>
 </div>
 	
 
@@ -308,5 +299,4 @@
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap-4.4.1.js"></script>
 </body>
-
 </html>
