--- a/gallery.html
+++ b/gallery.html
@@ -48,10 +48,6 @@
       <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
 	  <li data-target="#carouselExampleIndicators1" data-slide-to="3"></li>
       <li data-target="#carouselExampleIndicators1" data-slide-to="4"></li>
-	  <li data-target="#carouselExampleIndicators1" data-slide-to="5"></li>
-	  <li data-target="#carouselExampleIndicators1" data-slide-to="6"></li>
-	  <li data-target="#carouselExampleIndicators1" data-slide-to="7"></li>
-	  <li data-target="#carouselExampleIndicators1" data-slide-to="8"></li>
     </ol>
     <div class="carousel-inner" role="listbox">
       <div class="carousel-item active"><a href="#model 1"><img class="d-block mx-auto" src="./gallery/M1/1.png" alt="1st model picture" style="max-height: 600px; min-height: 250px; object-fit: scale-down; width: 100%;"></a>
@@ -82,41 +78,6 @@
           </p>
         </div>
       </div>
-	  <div class="carousel-item"><a href="#model 5"><img class="d-block mx-auto" src="./gallery/M5/1.png" alt="5th model picture" style="max-height: 600px; min-height: 250px; object-fit: scale-down; width: 100%;"></a>
-        <div class="carousel-caption" style="background: #A6A6A6A0; font-size: 12px; font-style: oblique; max-height: 50px">
-          <p>
-			Model #5
-          </p>
-        </div>
-      </div>
-	  <div class="carousel-item"><a href="#model 6"><img class="d-block mx-auto" src="./gallery/M6/1.png" alt="6th model picture" style="max-height: 600px; min-height: 250px; object-fit: scale-down; width: 100%;"></a>
-        <div class="carousel-caption" style="background: #A6A6A6A0; font-size: 12px; font-style: oblique; max-height: 50px">
-          <p>
-			Model #6
-          </p>
-        </div>
-      </div>
-	  	  <div class="carousel-item"><a href="#model 7"><img class="d-block mx-auto" src="./gallery/M7/1.png" alt="7th model picture" style="max-height: 600px; min-height: 250px; object-fit: scale-down; width: 100%;"></a>
-        <div class="carousel-caption" style="background: #A6A6A6A0; font-size: 12px; font-style: oblique; max-height: 50px">
-          <p>
-			Model #7
-          </p>
-        </div>
-      </div>
-	  <div class="carousel-item"><a href="#model 8"><img class="d-block mx-auto" src="./gallery/M8/1.png" alt="8th model picture" style="max-height: 600px; min-height: 250px; object-fit: scale-down; width: 100%;"></a>
-        <div class="carousel-caption" style="background: #A6A6A6A0; font-size: 12px; font-style: oblique; max-height: 50px">
-          <p>
-			Model #8
-          </p>
-        </div>
-      </div>
-	  <div class="carousel-item"><a href="#model 9"><img class="d-block mx-auto" src="./gallery/M9/1.png" alt="9th model picture" style="max-height: 600px; min-height: 250px; object-fit: scale-down; width: 100%;"></a>
-        <div class="carousel-caption" style="background: #A6A6A6A0; font-size: 12px; font-style: oblique; max-height: 50px">
-          <p>
-			Model #9
-          </p>
-        </div>
-      </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators1" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"  style="max-width: 50px"></span> <span class="sr-only">Previous</span></a>
 	<a class="carousel-control-next" href="#carouselExampleIndicators1" role="button" data-slide="next" style="max-width: 50px"> <span class="carousel-control-next-icon" aria-hidden="true"  style="max-width: 50px"></span> <span class="sr-only">Next</span> </a>
@@ -142,11 +103,6 @@
     	<a href="#model 2"><img src="./gallery/M2/1.png" width="40" height="40" alt="2nd model picture" style="object-fit: scale-down"/>&ensp;Model #2</a><br/>
 		<a href="#model 3"><img src="./gallery/M3/1.png" width="40" height="40" alt="3rd model picture" style="object-fit: scale-down"/>&ensp;Model #3</a><br/>
 		<a href="#model 4"><img src="./gallery/M4/1.png" width="40" height="40" alt="4th model picture" style="object-fit: scale-down"/>&ensp;Model #4</a><br/>
-		<a href="#model 5"><img src="./gallery/M5/1.png" width="40" height="40" alt="5th model picture" style="object-fit: scale-down"/>&ensp;Model #5</a><br/>
-		<a href="#model 6"><img src="./gallery/M6/1.png" width="40" height="40" alt="4th model picture" style="object-fit: scale-down"/>&ensp;Model #6</a><br/>
-		<a href="#model 7"><img src="./gallery/M7/1.png" width="40" height="40" alt="4th model picture" style="object-fit: scale-down"/>&ensp;Model #7</a><br/>
-		<a href="#model 8"><img src="./gallery/M8/1.png" width="40" height="40" alt="4th model picture" style="object-fit: scale-down"/>&ensp;Model #8</a><br/>
-		<a href="#model 9"><img src="./gallery/M9/1.png" width="40" height="40" alt="4th model picture" style="object-fit: scale-down"/>&ensp;Model #9</a>
 </h5>
 </div>
 <div id="model 1">
@@ -225,6 +181,31 @@ Model #3</h3><br/>
 </tbody>
 </table>
 </div>
+
+<div id="model 4">
+<h3 align="center"></br>
+Model #4</h3><br/>
+<table>
+<tbody>
+	
+<tr height = "400">
+<td style="width: 33%"><a href="./gallery/M4/1.png"><img src="./gallery/M4/1.png" alt="4th model picture #1" style="max-width: 100%; height: auto;"></a></td>
+<td style="width: 33%"><a href="./gallery/M4/2.png"><img src="./gallery/M4/2.png" alt="4th model picture #2" style="max-width: 100%; height: auto;"></a></td>
+<td style="width: 33%"><a href="./gallery/M4/3.png"><img src="./gallery/M4/3.png" alt="4th model picture #3" style="max-width: 100%; height: auto;"></a></td>
+</tr>
+<tr height = "400">
+<td style="width: 33%"><a href="./gallery/M4/4.png"><img src="./gallery/M4/4.png" alt="4th model picture #4" style="max-width: 100%; height: auto;"></a></td>
+<td style="width: 33%"><a href="./gallery/M4/5.png"><img src="./gallery/M4/5.png" alt="4th model picture #5" style="max-width: 100%; height: auto;"></a></td>
+<td style="width: 33%"><a href="./gallery/M4/6.png"><img src="./gallery/M4/6.png" alt="4th model picture #6" style="max-width: 100%; height: auto;"></a></td>
+</tr>
+<tr height = "400">
+<td style="width: 33%"><a href="./gallery/M4/7.png"><img src="./gallery/M4/7.png" alt="4th model picture #7" style="max-width: 100%; height: auto;"></a></td>
+<td style="width: 33%"><a href="./gallery/M4/8.png"><img src="./gallery/M4/8.png" alt="4th model picture #8" style="max-width: 100%; height: auto;"></a></td>
+<td style="width: 33%"><a href="./gallery/M4/9.png"><img src="./gallery/M4/9.png" alt="4th model picture #9" style="max-width: 100%; height: auto;"></a></td>
+</tr>
+</tbody>
+</table>
+</div>
 	
 
 <div id="model 6">
@@ -299,4 +280,5 @@ Model #3</h3><br/>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap-4.4.1.js"></script>
 </body>
+
 </html>
