--- a/gallery.html
+++ b/gallery.html
@@ -303,6 +303,32 @@ Model #6</h3><br/>
 </div>
 
 
+<div id="model 7">
+<h3 align="center"></br>
+Model #7</h3><br/>
+<table style="width: 100%; background-color: rgba(222, 222, 222, 0.3); border-collapse: collapse;">
+<tbody>
+	
+<tr height = "400">
+<td style="width: 33%"><a href="./gallery/M7/1.png"><img src="./gallery/M7/1.png" alt="7th model picture #1" style="max-width: 100%; height: auto;"></a></td>
+<td style="width: 33%"><a href="./gallery/M7/2.png"><img src="./gallery/M7/2.png" alt="7th model picture #2" style="max-width: 100%; height: auto;"></a></td>
+<td style="width: 33%"><a href="./gallery/M7/3.png"><img src="./gallery/M7/3.png" alt="7th model picture #3" style="max-width: 100%; height: auto;"></a></td>
+</tr>
+<tr height = "400">
+<td style="width: 33%"><a href="./gallery/M7/4.png"><img src="./gallery/M7/4.png" alt="7th model picture #4" style="max-width: 100%; height: auto;"></a></td>
+<td style="width: 33%"><a href="./gallery/M7/5.png"><img src="./gallery/M7/5.png" alt="7th model picture #5" style="max-width: 100%; height: auto;"></a></td>
+<td style="width: 33%"><a href="./gallery/M7/6.png"><img src="./gallery/M7/6.png" alt="7th model picture #6" style="max-width: 100%; height: auto;"></a></td>
+</tr>
+<tr height = "400">
+<td style="width: 33%"><a href="./gallery/M7/7.png"><img src="./gallery/M7/7.png" alt="7th model picture #7" style="max-width: 100%; height: auto;"></a></td>
+<td style="width: 33%"><a href="./gallery/M7/8.png"><img src="./gallery/M7/8.png" alt="7th model picture #8" style="max-width: 100%; height: auto;"></a></td>
+<td style="width: 33%"><a href="./gallery/M7/9.png"><img src="./gallery/M7/9.png" alt="7th model picture #9" style="max-width: 100%; height: auto;"></a></td>
+</tr>
+</tbody>
+</table>
+</div>
+
+
 
 
 <!-- body code goes here -->
